# bitcoin

./: .editorconfig  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  THIRD-PARTY-LICENSES.md  cleanup.sh  pyproject.toml  setup.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
bitcoin/: __init__.py  arithmetic.py  batch.py  cli.py  coincurve_backend.py  config.py  der.py  ecc.py  ecc_backend.py  exceptions.py  extractor.py  fetcher.py  health.py  linear.py  models.py  parser.py  psbt.py  script.py  serializer.py  settings.py  sighash.py  signature.py  transaction.py  utils.py
bitcoin/cli/: __init__.py  app.py
bitcoin/curve/: __init__.py  backend.py  (+8 more)
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DATA_FLOW.md  DEPENDENCIES.md  GLOSSARY.md  MATH.md  MODULES.md  README.md  TESTING.md
tests/: __init__.py  conftest.py  helpers.py  test_attack.py  test_batch.py  test_benchmarks.py  test_cli.py  test_cli_coverage.py  test_concurrency.py  test_config.py  test_coverage_new.py  test_curve.py  test_ecc.py  test_encoding.py  test_extraction.py  test_extraction_coverage.py  test_field.py  test_fuzzing.py  test_health.py  test_imports.py  test_linear.py  test_low_coverage_modules.py  test_mainnet.py  test_mainnet_vectors.py  test_misc_coverage.py  test_parse_tx.py  test_properties.py  test_psbt.py  test_psbt_new.py  test_psbt_parser.py  test_schnorr.py  test_serialization.py  test_sighash_full.py  test_signature_new.py  test_stateful.py  test_transaction.py  test_transaction_new.py
(+61 files in other folders)
