[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin"
version = "0.2.0"
description = "Extract and linearize ECDSA signatures (r, s, z) from Bitcoin transactions with pure-Python secp256k1"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OpenAI" }]
dependencies = ["typer>=0.12,<1"]

[project.optional-dependencies]
coincurve = ["coincurve>=18,<19"]
dev = ["hypothesis>=6,<7", "pytest>=8,<9", "pytest-cov>=5,<6", "pytest-benchmark>=4,<5", "ruff>=0.4,<1", "mypy>=1.8,<2", "pre-commit>=3,<4"]
all = ["bitcoin[coincurve,dev]"]

[project.scripts]
bitcoin = "bitcoin.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["bitcoin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".hypothesis", ".benchmarks", ".pytest_cache"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

